--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -37,8 +37,8 @@
     <color name="widget_text_panel">#FF374248</color>
 
     <!-- Launcher Settings -->
-    <color name="primary">#ff303F9F</color>
-    <color name="primary_dark">#ff283593</color>
+    <color name="primary">#0288d1</color>
+    <color name="primary_dark">#0277bd</color>
     <color name="primary_light">#ff3949AB</color>
     <color name="accent">#ff303F9F</color>
 
